--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
     <!-- <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png"> -->
+    <script>
+  if (window.location.pathname !== "/") {
+    window.location.href = "/";
+  }
+</script>
    
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Esraa Abdelnasser | frontend developer</title>
